--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,20 @@
-
+{
+  "name": "Electronics Store",
+  "short_name": "ES",
+  "start_url": "/index.html",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#000000",
+  "icons": [
+    {
+      "src": "",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
+}
