--- a/manifest.json
+++ b/manifest.json
@@ -7,12 +7,12 @@
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "",
+      "src": "IMG/favicon-192x192.jpg",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "",
+      "src": "IMG/favicon-512x512.jpg",
       "sizes": "512x512",
       "type": "image/png"
     }
