--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Electronics Store",
-  "short_name": "Electronics Store",
+  "short_name": "E-Store",
   "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#ffffff",
